samples/_failures_safe/1760961509_b4a934_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ba4aa5eb.c: In function ‘main’:
./samples/SAFE/__tmp_ba4aa5eb.c:174:9: error: expected declaration or statement at end of input
  174 |         }
      |         ^
./samples/SAFE/__tmp_ba4aa5eb.c:174:9: error: expected declaration or statement at end of input
